# daily-timeline-debrief

./: .gitignore  README.md  index.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
debrief/: __init__.py  __main__.py  cache.py  fetch.py  filenames.py  generate_day.py  image_urls.py  models.py  openai_utils.py  paths.py  pdf.py  query_enrichment.py  render.py  research.py  runtime.py  scrape_day.py  server.py  synthesize.py  tweets.py
templates/: cache_panel.html.j2  debrief.html.j2  empty_preview.html.j2  graphics.html.j2  preview.html.j2  scrape_metrics.html.j2  scrape_picker.html.j2
