[project]
name = "daily-timeline-debrief"
version = "0.1.0"
description = "Daily TBPN timeline row debriefs with research and print-ready HTML output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "trafilatura>=2.0.0",
    "openai>=1.68.0",
    "tavily-python>=0.5.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=7.0.0",
]

[project.scripts]
debrief = "debrief.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["debrief*"]

[tool.setuptools.package-data]
debrief = ["../templates/*"]
